<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_get_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30dp"
        android:layout_marginTop="@dimen/_60dp"
        android:layout_marginEnd="@dimen/_30dp"
        android:fontFamily="@font/gilroysemibold"
        android:text="@string/get_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_enter_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="@font/gilroyextrabold"
        android:text="@string/enter_your_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_get_otp"
        app:layout_constraintStart_toStartOf="@+id/tv_get_otp"
        app:layout_constraintTop_toBottomOf="@+id/tv_get_otp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_enter_phone"
        app:layout_constraintStart_toStartOf="@+id/tv_enter_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter_phone">

        <EditText
            android:id="@+id/et_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/app_border"
            android:cursorVisible="false"
            android:ems="3"
            android:fontFamily="@font/gilroyextrabold"
            android:inputType="none"
            android:padding="@dimen/_10dp"
            android:text="@string/india_prefix"
            android:textAlignment="textEnd"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@drawable/app_border"
            android:cursorVisible="false"
            android:ems="7"
            android:maxLength="10"
            android:fontFamily="@font/gilroyextrabold"
            android:inputType="none|numberSigned"
            android:padding="@dimen/_10dp"
            android:text="@string/testing_phone"
            android:textAlignment="center"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/round_button_yellow"
        android:fontFamily="@font/gilroysemibold"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:paddingLeft="@dimen/_30dp"
        android:paddingRight="@dimen/_30dp"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/yellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
