<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30dp"
                android:fontFamily="@font/gilroyextrabold"
                android:text="@string/notes"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:fontFamily="@font/gilroysemibold"
                android:text="@string/personal_messages_to_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                app:cardCornerRadius="@dimen/_20dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@null"
                        android:stateListAnimator="@null"/>

                    <TextView
                        android:id="@+id/tap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:text="@string/review"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10dp"
                        android:layout_marginBottom="@dimen/_10dp"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:fontFamily="@font/gilroyextrabold"
                        android:textSize="@dimen/_20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/tap"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_goneMarginBottom="5dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:fontFamily="@font/gilroyextrabold"
                android:text="@string/interested"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                android:paddingEnd="@dimen/_20dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/gilroysemibold"
                android:text="@string/premium_mem"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginStart="@dimen/_20dp" />

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/button_notes_yellow"
                android:fontFamily="@font/gilroyextrabold"
                android:paddingHorizontal="@dimen/_16dp"
                android:paddingVertical="@dimen/_10dp"
                android:text="@string/upgrade"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sp"
                android:stateListAnimator="@null"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_16dp">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:stateListAnimator="@null"/>

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginEnd="@dimen/_16dp"
                        android:layout_marginBottom="@dimen/_16dp"
                        android:fontFamily="@font/gilroyextrabold"
                        android:text="@string/teena"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sp"
                        android:layout_gravity="bottom" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_16dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@null"
                        android:stateListAnimator="@null"/>

                    <TextView
                        android:id="@+id/text_name_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16dp"
                        android:layout_marginBottom="@dimen/_16dp"
                        android:fontFamily="@font/gilroyextrabold"
                        android:text="@string/beena"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sp"
                        android:layout_gravity="bottom" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemIconTint="@drawable/state_check"
        app:itemTextColor="@drawable/state_check"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>